finish user creation
