# docs/swagger.yaml
@@ -1,5 +1,37 @@
 basePath: /v1
 definitions:
+  main.RegisterUserPayload:
+    properties:
+      email:
+        maxLength: 255
+        type: string
+      password:
+        maxLength: 72
+        minLength: 3
+        type: string
+      username:
+        maxLength: 100
+        type: string
+    required:
+    - email
+    - password
+    - username
+    type: object
+  main.UserWithToken:
+    properties:
+      createdat:
+        type: string
+      email:
+        type: string
+      id:
+        type: integer
+      isactive:
+        type: boolean
+      token:
+        type: string
+      username:
+        type: string
+    type: object
   store.User:
     properties:
       createdat:
@@ -8,6 +40,8 @@ definitions:
         type: string
       id:
         type: integer
+      isactive:
+        type: boolean
       username:
         type: string
     type: object
@@ -24,6 +58,34 @@ info:
   termsOfService: http://swagger.io/terms/
   title: Swagger GopherSocial API
 paths:
+  /authentication/user:
+    post:
+      consumes:
+      - application/json
+      description: Registers a user
+      parameters:
+      - description: User credentials
+        in: body
+        name: payload
+        required: true
+        schema:
+          $ref: '#/definitions/main.RegisterUserPayload'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: User registered
+          schema:
+            $ref: '#/definitions/main.UserWithToken'
+        "400":
+          description: Bad Request
+          schema: {}
+        "500":
+          description: Internal Server Error
+          schema: {}
+      summary: Registers a user
+      tags:
+      - authentication
   /users/{id}:
     get:
       consumes:
@@ -54,6 +116,33 @@ paths:
       security:
       - ApiKeyAuth: []
       summary: Fetches a user profile
+      tags:
+      - users
+  /users/activate/{token}:
+    put:
+      description: Activates/Register a user by invitation token
+      parameters:
+      - description: Invitation token
+        in: path
+        name: token
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "204":
+          description: User activated
+          schema:
+            type: string
+        "404":
+          description: Not Found
+          schema: {}
+        "500":
+          description: Internal Server Error
+          schema: {}
+      security:
+      - ApiKeyAuth: []
+      summary: Activates/Register a user
       tags:
       - users
 securityDefinitions:
